--- a/index.css
+++ b/index.css
@@ -1,50 +1,131 @@
-* {
-	margin: 0;
-	padding: 0;
-}
-
-
 @font-face {
 	font-family: MyFont;
 	src: url(https://yy.liveout.cn/13.woff2) format('woff2'),
-  }
-  
-  body {
-	font-family: MyFont, sans-serif;
-  }
+}
 
+body {
+	margin: 0;
+	padding: 0;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+}
 
-a{
+a {
 	color: #000000;
 }
-#container{
+
+#container {
 	width: 100%;
 	height: 100vh;
 }
-.wrap{
+
+.wrap {
 	position: relative;
 	top: 20%;
 	text-align: center;
 }
-.wrap img{
-    border-radius: 64px;
-    width: 128px;
-    height: 128px;
+
+.wrap img {
+	border-radius: 50%;
+	width: 128px;
+	height: 128px;
+	overflow: hidden;
+	box-shadow: 0 0 5px rgba(116, 8, 204, 0.3);
+	transition: transform 0.3s ease;
 }
-.wrap img:hover{
-    transform:rotate(360deg);
-	transition: transform .5s ease;
+
+.wrap img:hover {
+	/* transform: rotate(360deg);
+	transition: transform .5s ease; */
+	transform: scale(1.2);
+	filter: brightness(150%);
 }
-.nav{
-	margin-top:10px ;
-}
-.nav a{
+
+
+.fontb {
+	/* 设置字体大小 */
 	font-size: 18px;
-	margin: 0 5px;
+
+	/* 设置字体粗细 */
+	font-weight: bold;
+
+	/* 设置文字颜色 */
+	/* color: #333; */
+
+	/* 设置文字背景颜色 */
+	/* background-color: #f1f1f1; */
+
+	/* 设置文字对齐方式 */
+	text-align: center;
+
+	/* 设置文字装饰，比如下划线、删除线等 */
+	text-decoration: none;
+
+	/* 设置文字间距 */
+	letter-spacing: 1px;
+
+	/* 设置行高 */
+	line-height: 1.5;
+
+	/* 设置文字阴影 */
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
+
+	/* 设置文字换行方式 */
+	word-wrap: break-word;
+
 }
-h1{
+
+h1 {
 	margin: 15px 0;
+	font-size: 36px;
+	font-weight: bold;
+	color: #FFCCCC;
+	text-align: center;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
-p{
+
+p {
 	line-height: 2.1em;
 }
+
+
+
+
+nav ul {
+	display: flex;
+	justify-content: center;
+	list-style: none;
+}
+
+nav li {
+	display: inline-block;
+	margin: 10px 50px;
+}
+
+nav a {
+	color: #adc8e2;
+	font-size: 25px;
+	text-decoration: underline;
+	text-align: center;
+	font-weight: bold;
+	transition: transform 0.3s ease;
+	text-shadow: 2px 2px 4px rgba(204, 105, 105, 0.5);
+}
+
+nav a:hover {
+	transform: scale(1.2);
+	filter: brightness(110%);
+}
+
+#myCanvas {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+  }
+  
+
