--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ img {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #c0b8b8;
+    background-color: #ffffff;
 }
 
 .index_txt {
